
version 1.1.2:
	* MSN 'HTTP Method' fixed (Felipe Contreras)
	* Better handling of MSN's Individuals group and buddy status updates
	  (Felipe Contreras)
	* Fix a crash inviting MSN user to a chat when they're already there
	* AIM SecurID login support
	* Fix configuration of Jabber chat rooms on some servers
	* More MSN bug fixes (Felipe Contreras)

version 1.1.1 (12/28/2004):
	* Allow SILC authentication via public key if your key is password
	  protected (Michele Baldessari)
	* More MSN bug fixes (Felipe Contreras)
	* Drag-and-drop to conversation window file transfers work again
	* Disable the delete button on pounces that aren't saved yet anyway
	  (Kevin Stange)

version 1.1.0 (12/02/2004):
	New Features:
	* Binary relocable. Gaim will find its files even if it's installed
	  in a location other than the --prefix it was ./configured with.
	  Pass --disable-binreloc to ./configure to disable.
	* IRC now has fallback encodings, and tries harder to display
	  something useful during an encoding error.
	* New MSN protocol icon (Felipe Contreras)

	Bug Fixes:
	* Fix some leaks (Miah Gregory, Felipe Contreras)
	* Fix crashes when removing buddies in certain situations (Andrew Hart)
	* Eliminate MSN switchboard errors (Felipe Contreras)
	* Fix MSN buddy icon synchronization (Felipe Contreras)
	* Correctly display file transfer dialogs for filenames containing &, < or >
	* Correctly display MSN authorization dialogs for friendly names containing
	  &, < or >
	* Properly align the right-click docklet menu with the docklet icon in
	  *nix.
	* Fix a crash if the MSN buddy list is not available
	* Fix a bug in the request api (Gary Kramlich)

version 1.0.3 (11/11/2004):
	Bug Fixes:
	* Jabber authentication fixes (Michael Plump)
	* Yahoo buddy idle reporting is more accurate (Evan Schoenberg)
	* "Allow All" privacy setting works on Yahoo (Peter Lawler)
	* Fix a crash when dragging a buddy to the conversation entry area
	* Fix a crash removing chats from the buddy list